config for index.js and hotdeploy

--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "server.js"
+  "main": "index.js",
+  "scripts": { "start": "supervisor index.js" },
 }
