--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-    "name": "OpenShift-Sample-App",
-    "version": "1.0.0",
-    "description": "OpenShift Sample Application",
-    "keywords": [
-        "OpenShift",
-        "Node.js",
-        "application",
-        "openshift"
-    ],
-    "author": {
-        "name": "OpenShift",
-        "email": "ramr@example.org",
-        "url": "http://www.openshift.com/"
-    },
-    "homepage": "http://www.openshift.com/",
-    "repository": {
-        "type": "git",
-        "url": "https://gitub.com/openshift/origin-server"
-    },
-    "engines": {
-        "node": ">= 0.6.0",
-        "npm": ">= 1.0.0"
-    },
-    "dependencies": {
-        "node-irc": "0.0.3"
-    },
-    "devDependencies": {},
-    "bundleDependencies": [],
-    "private": true,
-    "main": "index.js",
-    "scripts": {
-        "start": "supervisor index.js"
-    }
+  "name": "OpenShift-Sample-App",
+  "version": "1.0.0",
+  "description": "OpenShift Sample Application",
+  "keywords": [
+    "OpenShift",
+    "Node.js",
+    "application",
+    "openshift"
+  ],
+  "author": {
+    "name": "OpenShift",
+    "email": "ramr@example.org",
+    "url": "http://www.openshift.com/"
+  },
+  "homepage": "http://www.openshift.com/",
+  "repository": {
+    "type": "git",
+    "url": "https://gitub.com/openshift/origin-server"
+  },
+  "engines": {
+    "node": ">= 0.6.0",
+    "npm": ">= 1.0.0"
+  },
+  "dependencies": {
+    "irc": "~0.3.6"
+  },
+  "devDependencies": {},
+  "bundleDependencies": [],
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "supervisor index.js"
+  }
 }
