--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "irc": "~0.3.6"
+    "irc": "~0.3.6",
+    "lodash": "~1.3.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
