--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "irc": "~0.3.6",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "nconf": "~0.6.9"
   },
   "devDependencies": {},
   "bundleDependencies": [],
