--- a/package.json
+++ b/package.json
@@ -1,37 +1,22 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "Haxfred",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://gitub.com/openshift/origin-server"
-  },
-  "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
-  },
+  "description": "Your friendly Neighborhood #haxiom bot",
   "dependencies": {
     "irc": "~0.3.6",
     "lodash": "~1.3.1",
     "nconf": "~0.6.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~1.17.1",
+    "sinon": "~1.8.2",
+    "chai": "~1.9.0"
+  },
   "bundleDependencies": [],
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "supervisor index.js"
+    "start": "supervisor index.js",
+    "test": "mocha -w test --reporter spec"
   }
 }
