--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "irc": "~0.3.6",
     "lodash": "~1.3.1",
-    "q": "~1.0.0"
+    "q": "~1.0.0",
+    "nconf": "~0.6.9"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
