--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "irc": "~0.3.6",
     "lodash": "~1.3.1",
     "q": "~1.0.0",
-    "nconf": "~0.6.9"
+    "nconf": "~0.6.9",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
