--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "~1.3.1",
     "q": "~1.0.0",
     "nconf": "~0.6.9",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "sinon": "^1.9.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
