--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "q": "~1.0.0",
     "nconf": "~0.6.9",
     "node-uuid": "~1.4.1",
-    "sinon": "^1.9.1"
+    "sinon": "^1.9.1",
+    "sinon-chai": "^2.5.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
