--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "sinon-chai": "^2.5.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
-    "sinon": "~1.8.2",
-    "chai": "~1.9.0"
+    "chai": "~1.9.0",
+    "mocha": "^1.18.2",
+    "sinon": "~1.8.2"
   },
   "bundleDependencies": [],
   "private": true,
