--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "Haxfred",
   "version": "1.0.0",
+  "author": "Haxiom",
   "description": "Your friendly Neighborhood #haxiom bot",
+  "contributors": [
+    {
+      "name": "Nick Tomlin",
+      "web": "http://nick-tomlin.com/"
+    },
+    {
+      "name": "Sean Zelmer",
+      "web": "http://lejeunerenard.com/"
+    },
+    {
+      "name": "Blade Barringer",
+      "web": "http://bladebarringer.com/"
+    }
+  ],
   "dependencies": {
     "irc": "~0.3.6",
     "lodash": "~1.3.1",
