--- a/package.json
+++ b/package.json
@@ -23,16 +23,13 @@
     "lodash": "~1.3.1",
     "q": "~1.0.0",
     "nconf": "~0.6.9",
-    "node-uuid": "~1.4.1",
-    "sinon": "^1.9.1",
-    "sinon-chai": "^2.5.0"
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
-    "chai": "~1.9.0",
-    "mocha": "^1.18.2",
-    "sinon": "~1.8.2"
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2"
   },
-  "bundleDependencies": [],
   "private": true,
   "main": "lib/haxfred.js",
   "scripts": {
