--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "node-uuid": "~1.4.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
