--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "snazzy": "^2.0.1",
     "standard": "^5.4.1"
   },
