--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     }
   ],
   "dependencies": {
-    "lodash": "~1.3.1",
-    "q": "~1.0.0",
+    "lodash": "^3.10.1",
     "nconf": "~0.6.9",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "q": "~1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
